# bizra-data-lake

./: .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  ACTIVATE-GOLD-MINE.bat  AGENT_ROLES.md  ARCHITECTURE.md  BIZRA-ECOSYSTEM-MAP.md  BIZRA_Competitive_Intelligence_v3.html  BIZRA_STRATEGY_DECK_2026.md  BIZRA_Universal_Constitution_v2.0.0_FINAL.html  BIZRA_Universal_Constitution_v3.0.0_GENESIS.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA4LLM_full_extract.txt  DAY2_SEEDLING.md  DDAGI_CONSTITUTION_v1.1.0-FINAL.md  DOCS_INDEX.md  DataLakeProcessor.ps1  Dockerfile  Dockerfile.flywheel  GENESIS_ACTION_PLAN.md  GENESIS_MANIFEST_VERIFIED.yaml  GENESIS_PREPARATION_REPORT.md  HYPERGRAPH-RAG-VISION.md  IDENTITY.md  IHSAN_CONSTRAINTS.yaml  INDEXING_PLAN.md  KNOWLEDGE_BASE.md  LICENSE  NODE0_GENESIS_COVENANT.md  NODE0_IDENTITY.yaml  OMEGA_ROADMAP.json  OPERATIONS_QUEUE.md  PEAK_MASTERPIECE_README.md  PINNACLE_ROADMAP.md  (+84 more)
bizra-omega/: .dockerignore  .env.example  Cargo.toml  Dockerfile  INTEGRATION_REPORT.md  bizra.bat  deny.toml  docker-compose.gpu.yml  docker-compose.yml
bizra-omega/.claude/: memory.db  settings.json
bizra-omega/.claude/hooks/: README.md  cargo-watch.sh  post-rust-edit.sh  pre-rust-edit.sh  session-end.sh  snr-check.sh
bizra-omega/.github/workflows/: ci.yml  deploy.yml
bizra-omega/bizra-api/: Cargo.toml  README.md
bizra-omega/bizra-api/src/: error.rs  lib.rs  main.rs  routes.rs  state.rs  websocket.rs
bizra-omega/bizra-api/src/handlers/: constitution.rs  federation.rs  health.rs  identity.rs  inference.rs  metrics.rs  mod.rs  pci.rs  status.rs
bizra-omega/bizra-api/src/middleware/: mod.rs  rate_limit.rs
bizra-omega/bizra-api/tests/: api_tests.rs
bizra-omega/bizra-autopoiesis/: Cargo.toml  README.md
bizra-omega/bizra-autopoiesis/src/: lib.rs  pattern_memory.rs  preference_tracker.rs
bizra-omega/bizra-autopoiesis/tests/: pattern_memory_tests.rs  preference_tracker_tests.rs
bizra-omega/bizra-cli/: Cargo.toml  README.md
bizra-omega/bizra-cli/config/: a2a_protocol.yaml  hooks.yaml  mcp_servers.yaml  proactive.yaml  prompt_library.yaml  skills.yaml  slash_commands.yaml  sovereign_profile.yaml
bizra-omega/bizra-cli/docs/: INDEX.md  PHILOSOPHY.md  QUICKSTART.md
bizra-omega/bizra-cli/docs/architecture/: AGENT-ARCHITECTURE.md  DATA-FLOW.md  INTEGRATION-POINTS.md  SECURITY-MODEL.md  SYSTEM-OVERVIEW.md
bizra-omega/bizra-cli/docs/guides/: 01-INSTALLATION.md  02-FIRST-RUN.md  03-PERSONALIZATION.md  04-PAT-AGENTS.md  05-SLASH-COMMANDS.md  06-TUI-NAVIGATION.md  07-VOICE-INTERFACE.md  08-MCP-INTEGRATION.md  09-HOOKS-AUTOMATION.md  10-SKILLS-SYSTEM.md  11-PROACTIVE-SYSTEM.md
bizra-omega/bizra-cli/docs/reference/: A2A-PROTOCOL.md  COMMAND-REFERENCE.md  CONFIG-REFERENCE.md  FATE-GATES.md
bizra-omega/bizra-cli/src/: app.rs  config.rs  inference.rs  lib.rs  main.rs  theme.rs
bizra-omega/bizra-cli/src/commands/: mod.rs
bizra-omega/bizra-cli/src/widgets/: agent_card.rs  fate_gauge.rs  header.rs  mod.rs  status_bar.rs
bizra-omega/bizra-core/: Cargo.toml  README.md
bizra-omega/bizra-core/src/: constitution.rs  genesis.rs  identity.rs  islamic_finance.rs  lib.rs  omega.rs
bizra-omega/bizra-core/src/pat/: attestation.rs  minting.rs  mod.rs  types.rs
bizra-omega/bizra-core/src/pci/: envelope.rs  gates.rs  kleisli.rs  mod.rs  reject_codes.rs
bizra-omega/bizra-core/src/simd/: batch.rs  gates.rs  hash.rs  mod.rs
bizra-omega/bizra-core/src/sovereign/: error.rs  experience_ledger.rs  giants.rs  mod.rs  omega.rs  (+4 more)
bizra-omega/bizra-federation/: Cargo.toml  README.md
bizra-omega/bizra-federation/src/: bootstrap.rs  consensus.rs  gossip.rs  lib.rs  node.rs
bizra-omega/bizra-federation/tests/: consensus_tests.rs  gossip_tests.rs  node_tests.rs
bizra-omega/bizra-hunter/: CLI_GIANTS_TUI.md  Cargo.toml  MARKET_COMPARISON.md  NODE0_MONETIZATION_PLAN.md  PERFORMANCE_REPORT.md  README.md
bizra-omega/bizra-hunter/benches/: snr_pipeline.rs
bizra-omega/bizra-hunter/src/: cascade.rs  config.rs  entropy.rs  hunter.rs  invariant.rs  lib.rs  main.rs  pipeline.rs  poc.rs  rent.rs  submission.rs
bizra-omega/bizra-inference/: Cargo.toml  README.md
bizra-omega/bizra-inference/src/: gateway.rs  lib.rs  selector.rs
bizra-omega/bizra-installer/: Cargo.toml  README.md
bizra-omega/bizra-installer/src/: hardware_detect.rs  main.rs  model_cache.rs
bizra-omega/bizra-installer/tests/: installer_tests.rs
bizra-omega/bizra-proofspace/: Cargo.toml  README.md
bizra-omega/bizra-proofspace/benches/: proofspace_benchmark.rs
bizra-omega/bizra-proofspace/src/: lib.rs  main.rs
bizra-omega/bizra-python/: Cargo.toml  README.md  pyproject.toml
bizra-omega/bizra-python/src/: lib.rs
bizra-omega/bizra-python/tests/: test_bindings.py
bizra-omega/bizra-resourcepool/: Cargo.toml  README.md
bizra-omega/bizra-resourcepool/benches/: resourcepool_benchmark.rs
bizra-omega/bizra-resourcepool/src/: genesis.rs  lib.rs  main.rs  pat_inference.rs  proactive_pat.rs
bizra-omega/bizra-telescript/: Cargo.toml  README.md
bizra-omega/bizra-telescript/benches/: telescript_benchmark.rs
bizra-omega/bizra-telescript/src/: lib.rs  main.rs
bizra-omega/bizra-tests/: Cargo.toml  README.md
bizra-omega/bizra-tests/benches/: performance.rs
bizra-omega/bizra-tests/tests/: e2e.rs  federation_security.rs  got_properties.rs  inference_fallback.rs  integration.rs
bizra-omega/docs/: TEST_EXPANSION_PLAN.md
bizra-omega/docs/specs/: pat-sat-minting.ts
bizra-omega/k8s/: deployment.yaml
bizra-omega/scripts/: activate-voice-pat.sh  deploy-node0.sh  healthcheck.sh
bizra-omega/tests/: e2e_tests.rs  integration_tests.rs
native/: BUILD-REQUIREMENTS.md  Cargo.toml
native/fate-binding/: Cargo.toml  README.md  index.d.ts  package.json
native/fate-binding/src/: capability_card.rs  dilithium.rs  gate_chain.rs  lib.rs  z3_ihsan.rs
native/iceoryx-bridge/: Cargo.toml  README.md
native/iceoryx-bridge/benches/: ipc_latency.rs
native/iceoryx-bridge/src/: channels.rs  ipc_router.rs  lib.rs  message_types.rs
(+4473 files in other folders)
