[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bizra-data-lake"
version = "1.0.0"
description = "BIZRA Sovereign Organism - Unified Data Lake & Hypergraph"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",  # Modern numpy (requires code fixes for np.object)
    "pandas>=2.0.0",
    "torch>=2.0.0",
    "cryptography>=41.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.15.0",
    "pyarrow>=12.0.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.6",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --ignore=evidence --ignore=00_INTAKE"
testpaths = [
    "tests",
    "core",
]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py39']
