[workspace]
resolver = "2"
members = [
    "fate-binding",
    "iceoryx-bridge",
]

[workspace.package]
version = "2.2.0"
edition = "2021"
license = "MIT"
authors = ["BIZRA Collective"]

[workspace.dependencies]
# Common dependencies across all native crates
napi = { version = "2.14", features = ["async", "napi8"] }
napi-derive = "2.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Pinned transitive deps — security floor
bytes = ">=1.11.1"  # Fix RUSTSEC-2026-0007: integer overflow in BytesMut::reserve

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
