[package]
name = "bizra-api"
version = "0.1.0"
edition = "2021"
description = "BIZRA Sovereign API Gateway — Unified REST/WebSocket interface"
authors = ["BIZRA Collective"]
license = "MIT"

[dependencies]
# Workspace crates
bizra-core = { path = "../bizra-core" }
bizra-inference = { path = "../bizra-inference" }
bizra-federation = { path = "../bizra-federation" }
bizra-autopoiesis = { path = "../bizra-autopoiesis" }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Crypto (for verification)
ed25519-dalek = "2"
hex = "0.4"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

# Metrics & Health
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Server deps
dirs = "5"
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "bizra-api"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
