[package]
name = "bizra-autopoiesis"
version.workspace = true
edition.workspace = true
description = "BIZRA Autopoiesis — Self-Creating Pattern Memory"

[dependencies]
bizra-core = { path = "../bizra-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
