[package]
name = "bizra-cli"
version = "1.0.0"
edition = "2021"
authors = ["MoMo (محمد) <sovereign@bizra.node0>"]
description = "BIZRA Sovereign CLI/TUI — Your Personal Command Center"
license = "MIT"
keywords = ["cli", "tui", "sovereign", "ai", "pat"]

[dependencies]
# TUI Framework
ratatui = { version = "0.30", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros"] }

# CLI
clap = { version = "4.5", features = ["derive", "env", "color"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# HTTP client for LM Studio
reqwest.workspace = true
futures = "0.3"

[features]
default = []

[[bin]]
name = "bizra"
path = "src/main.rs"
