[package]
name = "bizra-federation"
version.workspace = true
edition.workspace = true
description = "BIZRA Federation — SWIM Gossip + BFT Consensus"

[dependencies]
bizra-core = { path = "../bizra-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
# CRIT-1/2: Ed25519 cryptographic signatures for consensus and gossip
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
