[package]
name = "bizra-hunter"
version = "1.0.0"
edition = "2021"
authors = ["BIZRA Node0 <node0@bizra.io>"]
description = "SNR-Maximized Vulnerability Hunter - 47.9M ops/sec"
license = "MIT"
repository = "https://github.com/bizra-io/bizra-omega"

[lib]
name = "bizra_hunter"
path = "src/lib.rs"

[[bin]]
name = "bizra-hunter-snr"
path = "src/main.rs"

[features]
default = ["simd"]
simd = []
snr-max = ["simd"]
simd-entropy = ["simd"]
avx512 = []  # Enable only on supported CPUs

[dependencies]
# Lock-free data structures
crossbeam = "0.8"
crossbeam-queue = "0.3"

# Fast hashing
blake3 = "1.5"
rustc-hash = "1.1"

# Parallelism
rayon = "1.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time
chrono = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Synchronization (non-poisoning RwLock — eliminates panic cascades)
parking_lot = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cryptography
ed25519-dalek = "2.1"
rand = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Metrics (prometheus removed: RUSTSEC-2024-0437 protobuf vuln, crate was unused)

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "snr_pipeline"
harness = false

# Profiles are defined in workspace root Cargo.toml
