[package]
name = "bizra-inference"
version.workspace = true
edition.workspace = true
description = "BIZRA Inference — LLM Gateway with tiered backends"

[dependencies]
bizra-core = { path = "../bizra-core" }
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
