[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "bizra"
version = "1.0.0"
description = "BIZRA Sovereign Engine — Python bindings to Rust core"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "BIZRA Sovereign", email = "sovereign@bizra.node0"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]
keywords = ["bizra", "pci", "cryptography", "consensus", "federation"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "mypy"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
