[package]
name = "iceoryx-bridge"
version = "2.2.0"
edition = "2021"
description = "Zero-copy IPC bridge for BIZRA Sovereign LLM using Iceoryx2"
license = "MIT"
authors = ["BIZRA Collective"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Iceoryx2 for zero-copy IPC (250ns latency target)
iceoryx2 = "0.4"

# Node-API bindings
napi = { version = "2.14", features = ["async", "napi8"] }
napi-derive = "2.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"  # MessagePack for compact binary

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Shared memory utilities
memmap2 = "0.9"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
napi-build = "2.1"

[[bench]]
name = "ipc_latency"
harness = false
